Consertar algumas coisas

--- a/aulas videos/index.html
+++ b/aulas videos/index.html
@@ -1,84 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aulas</title>
-<link rel="stylesheet" href="./index.css">
-</head>
-<body>
-    
-<div class="pagina"></div>
+    <link rel="stylesheet" href="./index.css">
+  </head>
+  <body>
+    <div class="pagina"></div>
+    <div class="video">
+      <!--link(1)--> <!--link na bio-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/W0Af-WihOlw" title="Criando um link para BIO usando HTML e CSS (tutorial completo)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(2)-->  <!--criação de filme-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/gmQ7C36MJJo" title="CRIANDO O SITE DO ZERO , PLATAFORMA DE FILMES CÓDIGO FLIX , COM HTML , CSS3 , BOOTSTRAP E JAVASCRIPT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<!--link(1)--> <!--link na bio-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/W0Af-WihOlw" title="Criando um link para BIO usando HTML e CSS (tutorial completo)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+         <!--link(3)--> <!--calculadora-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/93wPYo1pjic" title="Crie Uma CALCULADORA com HTML, CSS &amp; JavaScript" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(4)--> <!--calculadora americana-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/_x8mNUBhLSk" title="Build a Calculator App in HTML, CSS &amp; JavaScript 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(5)--> <!--imaguem-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/uAR7-CDYzIY" title="COMO INSERIR IMAGEM DE FUNDO (BACKGROUND) DO JEITO CERTO - HTML &amp; CSS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<!--link(2)-->  <!--criação de filme-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/gmQ7C36MJJo" title="CRIANDO O SITE DO ZERO , PLATAFORMA DE FILMES CÓDIGO FLIX , COM HTML , CSS3 , BOOTSTRAP E JAVASCRIPT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <!--link(6)--> <!--efeito 3d-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/zrBVFGlnyA8" title="3D Portfolio Website | HTML CSS &amp; Javascript" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(7)--> <!--relogio-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/NlAw_kd2608" title="Analog Clock HTML CSS Javascript Dark Mode" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(8)--> <!--position relative-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/62KT2BUgmkU" title="Entenda position relative e absolute no CSS - Quando e como posicionar elementos na página" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-   <!--link(3)--> <!--calculadora-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/93wPYo1pjic" title="Crie Uma CALCULADORA com HTML, CSS &amp; JavaScript" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <!--link(9)--> <!--clone do tinder-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/bLNar9fmtqk" title="Crie Um Clone do TINDER com HTML &amp; CSS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(10)--> <!--qual o melhor framework-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/DSSRXhDDfuI" title="Qual o melhor framework JavaScript para 2023?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(11)--> <!--faça seu site-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/n_Etdr7Dbjs" title="HTML + CSS NA PRÁTICA 🔥 Faça seu primeiro site" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<!--link(4)--> <!--calculadora americana-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/_x8mNUBhLSk" title="Build a Calculator App in HTML, CSS &amp; JavaScript 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <!--link(12)--> <!--faça seu site-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/WCabAKcH-uU" title="Como excluir um repositório de maneira fácil no GitHub!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <!--link(14)--> <!--plai liste aulas -->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/bCFTv8a59PE?list=PLbIBj8vQhvm00J3f3rD33tRuNLem8EgEA" title="Curso de HTML e CSS - Estrutura básica do HTML - Aula 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-
-<!--link(5)--> <!--imaguem-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/uAR7-CDYzIY" title="COMO INSERIR IMAGEM DE FUNDO (BACKGROUND) DO JEITO CERTO - HTML &amp; CSS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(6)--> <!--efeito 3d-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/zrBVFGlnyA8" title="3D Portfolio Website | HTML CSS &amp; Javascript" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(7)--> <!--relogio-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/NlAw_kd2608" title="Analog Clock HTML CSS Javascript Dark Mode" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(8)--> <!--position relative-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/62KT2BUgmkU" title="Entenda position relative e absolute no CSS - Quando e como posicionar elementos na página" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(9)--> <!--clone do tinder-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/bLNar9fmtqk" title="Crie Um Clone do TINDER com HTML &amp; CSS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(10)--> <!--qual o melhor framework-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/DSSRXhDDfuI" title="Qual o melhor framework JavaScript para 2023?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(11)--> <!--faça seu site-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/n_Etdr7Dbjs" title="HTML + CSS NA PRÁTICA 🔥 Faça seu primeiro site" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(12)--> <!--faça seu site-->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/WCabAKcH-uU" title="Como excluir um repositório de maneira fácil no GitHub!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-<!--link(14)--> <!--plai liste aulas -->
-<div class="video"><iframe width="508" height="400" src="https://www.youtube.com/embed/bCFTv8a59PE?list=PLbIBj8vQhvm00J3f3rD33tRuNLem8EgEA" title="Curso de HTML e CSS - Estrutura básica do HTML - Aula 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-
-
-<!--link(15)--> <!-- plai liste Criando o primeiro Repositório-->
-<div class="vidoe"><iframe width="508" height="400" src="https://www.youtube.com/embed/xEKo29OWILE?list=PLHz_AreHm4dm7ZULPAmadvNhH6vk9oNZA" title="O que é Git? O que é versionamento? - Curso de Git e GitHub" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-
-<a href=""></a>
-</div>
-</body>
+      <!--link(15)--> <!-- plai liste Criando o primeiro Repositório-->
+      <iframe width="49.5%" height="400" src="https://www.youtube.com/embed/xEKo29OWILE?list=PLHz_AreHm4dm7ZULPAmadvNhH6vk9oNZA" title="O que é Git? O que é versionamento? - Curso de Git e GitHub" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <a href=""></a>
+  </body>
 </html>
